fix  Minimized legend overlaps with the Zoom component

--- a/src/components/atlas/Atlas.scss
+++ b/src/components/atlas/Atlas.scss
@@ -11,8 +11,8 @@
 
 .atlas__sidebar-button {
   position: absolute;
-  left: 0px;
-  top: 20px;
+  left: 10px;
+  top: 120px;
   width: 30px;
   height: 60px;
   background: white;
